# marketpilot

./: .flake8  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_STREAMLINING_PLAN.md  BACKEND_FRONTEND_ANALYSIS.md  BACKEND_FRONTEND_FIXES_SUMMARY.md  CODE_QUALITY_GUIDE.md  COMPLETE_REFACTORING_SUMMARY.md  COMPREHENSIVE_BUG_CHECK_SUMMARY.md  COMPREHENSIVE_TODO_SUMMARY.md  CONFIG_ANALYSIS_REPORT.md  CONFIG_MAP.md  CONFIG_MIGRATION_REPORT.md  CREDENTIAL_MANAGEMENT_SUMMARY.md  DCA_SIMULATION_SYSTEM_SUMMARY.md  DCA_STREAMLINING_SUMMARY.md  DCA_SYSTEM_ANALYSIS.md  DEAD_COMPONENTS_CLEANUP_SUMMARY.md  DEPLOYMENT_HISTORY.md  DEPLOYMENT_SOLUTION.md  END_TO_END_COMPONENT_REVIEW.md  FINAL_ARCHITECTURE_REVIEW.md  FOR_JOHN.md  FRONTEND_CLEANUP_SUMMARY.md  FRONTEND_CONFIG_CLEANUP_ANALYSIS.md  FRONTEND_CONFIG_COMPLETE_FIX.md  FRONTEND_DEPLOYMENT_ANALYSIS.md  FRONTEND_REVIEW_STATUS.md  INDICATOR_ANALYSIS_REPORT.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MIGRATION_TO_V2.md  MINIMAL_SYSTEMD_SETUP.md  ML_MODEL_MAP.md  ML_PIPELINE_ANALYSIS.md  MONITORING_SETUP_COMPLETE.md  Makefile  ONBOARDING_GUIDE.md  (+107 more)
archive/: GptCodeEditor.jsx_no_brain  GptCodeEditor.jsx_no_tree_access  build_recovery_training_dataset.py_not_sysd_ready  build_unified_ml_dataset.py_old_way  clean_and_flatten_for_ml.py_signle_day  debug_dca_diagnostic.py  gpt_code_editor_api.py_annoyiing  gpt_code_editor_api.py_doer_noBrain  gpt_code_editor_api.py_dumbasfuck  smart_dca_signal.py_update_in_progresss  train_recovery_model.py_low_odds
conditions/: btc_market_condition.py
config/: __init__.py  binance_futures_testnet.json  config_loader.py  dca_config.yaml  dca_config.yaml_move_trade  default_dca_config.json  fork_safu_config.yaml  fork_score_config.yaml  leverage_config.yaml  m6d  ml_pipeline_config.yaml  paper_cred.json  paths_config.yaml  smart_dca_config.yaml  tv_screener_config.yaml  unified_config_manager.py  unified_pipeline_config.yaml  user_dca_config.json
config_migration_backup/: migrate_to_unified_config.py  test_unified_config.py
core/: __init__.py  fork_scorer.py  fork_scorer_refactored.py  redis_utils.py
dashboard_backend/: .gitignore  api_control_router.py  btc_logger.py  cache_writer.py  dca_status.py  dca_trades_api.py  dca_trades_api.py_fallback_clsoetrade  dca_trades_api.py_works_not_graceful  decorators.py  fork_score_config_api.py  main.py  main.py_button_  main.py_fallback_presim  main_fixed.py  metrics.py  metrics_fork_3commas.py  metrics_routes.py  middleware.py  ml_confidence_api.py  ml_confidence_cache_writer.py  pull_active_trades.py  redis_interface.py  refresh_price_api.py  threecommas_metrics.py  threecommas_metrics_fixed.py  unified_fork_metrics.py
dashboard_frontend/: .env.development  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  (+9 more)
(+897 files in other folders)
